<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/layout"
              >



    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
           >

        <ImageView
                android:id="@+id/imageviewHead"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/default_head"
                />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textColor="@color/text_title"
                    />


            <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:textSize="12sp"
                    android:textColor="@color/text_normal"
                    android:text=""/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/selector_list_item">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/text_normal"
                android:layout_marginRight="10dp"
                android:text="@string/from"/>


        <TextView
                android:id="@+id/txtFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_title"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/selector_list_item">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/text_normal"
                android:layout_marginRight="10dp"
                android:text="@string/age"/>


        <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_title"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/selector_list_item">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/text_normal"
                android:layout_marginRight="10dp"
                android:text="@string/company"/>


        <TextView
                android:id="@+id/txtCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_title"
                />

    </LinearLayout>


    <Button
            android:id="@+id/btnMsgAt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/bigGreenButton"
            android:text="@string/msgtosomeone"
            android:onClick="msgAt"
            />


    <Button
            android:id="@+id/btnRequest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            style="@style/bigGreenButton"
            android:text="@string/friend_add"
            android:onClick="requestClick"

            />


</LinearLayout>