<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              style="@style/layout">


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/selector_list_item">

        <ImageView
                android:id="@+id/imageviewHead"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">
            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textColor="@color/text_title"
                    />
            <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:textSize="12sp"
                    android:textColor="@color/text_normal"
                    android:text=""/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/prf_item"
            android:id="@+id/viewSetting">


        <ImageView
                android:id="@+id/imageSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_more_setting"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageSetting"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                style="@style/text_title"
                android:text="@string/sys_setting"
                />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_arror_right"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            style="@style/prf_item"
            android:id="@+id/viewAboutus">
        <ImageView
                android:id="@+id/imageAboutUS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_more_about_us"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageAboutUS"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                style="@style/text_title"
                android:text="@string/about_us"
                />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_arror_right"/>
    </RelativeLayout>
    <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/bigRedButton"
            android:text="@string/logout"
            />
</LinearLayout>